fix: Se corrigio el gap para que se visualize mal con los nav hijos

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -64,7 +64,7 @@ $icon-user-hover: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w
   }
 
   &.flex-column {
-    gap: 0.188rem;
+    gap: 0.250rem;
     margin-top: 0.188rem;
 
     &:first-child {
